--- a/DIDL_Style_Transfer_Tutorial.ipynb
+++ b/DIDL_Style_Transfer_Tutorial.ipynb
@@ -111,7 +111,7 @@
       "source": [
         "Now, we are going to download our content and style image. \n",
         "\n",
-        "You can use your own images. You just have to save it in the content folder. Go to **Files** (Folder symbol) and then go to the **content** folder. Then, you have to upload your images. We recommend you to save your images as *content.jpg* and *style.jpg*. For this step, you must have to comment on the first two lines and uncomment the last two lines.\n",
+        "You can use your own images. You just have to save it in the content folder. Go to **Files** (Folder icon) and then go to the **content** folder. Then, you have to upload your images. We recommend you to save your images as *content.jpg* and *style.jpg*. For this step, you must have to comment on the first two lines and uncomment the last two lines.\n",
         "\n"
       ]
     },
