--- a/DIDL_Style_Transfer_Tutorial.ipynb
+++ b/DIDL_Style_Transfer_Tutorial.ipynb
@@ -74,7 +74,7 @@
         "import functools\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "    tensor = tensor[0]\n",
         "  return PIL.Image.fromarray(tensor)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,10 +119,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SVIFdQ6B_Ekn",
-        "outputId": "70a3187d-6f8a-447c-c39c-86d00e6dc49e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70a3187d-6f8a-447c-c39c-86d00e6dc49e"
       },
       "source": [
         "content_path = tf.keras.utils.get_file('YellowLabradorLooking_new.jpg', 'https://storage.googleapis.com/download.tensorflow.org/example_images/YellowLabradorLooking_new.jpg')\n",
@@ -135,7 +135,7 @@
         "#content_path=\"content.jpg\"\n",
         "#style_path=\"style.jpg\""
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +153,7 @@
         "id": "GUnXKRFJKJ6N"
       },
       "source": [
-        "Now, we are going to define a function to load an image and limit its maximum dimension to 512 pixels. \n",
+        "We're now going to define a function to load an image and limit its maximum dimension to 512 pixels. \n",
         "First, we define that the maximum dimension (max_dim) is 512 pixels. Then, we use *tf.io.reade_file* to load the image. Then, we decode the image, which means that the image has three channels (RGB). The color images have three layers (3 numerical matrices) that represent the RGB (Red, Blue, and Green) channels. Then we are going to convert (cast) the image to *tf.float32* type. \n",
         "\n",
         "Then, we are going to save the shape of the image in the shape variable. Then we are going to define some variables (like *shape, long_dim,* and *scale*) to reshape (or *resize*) our images and avoid shape problems later in our CNN model. \n",
@@ -183,7 +183,7 @@
         "  img = img[tf.newaxis, :]\n",
         "  return img"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "id": "74AdTfm9NWJ4"
       },
       "source": [
-        "Now, we define a simple function to display an image. For this, we are using *matplotlib* library and its *imshow* function. "
+        "In this step, we define a simple function to display an image. For this, we are using *matplotlib* library and its *imshow* function. "
       ]
     },
     {
@@ -209,7 +209,7 @@
         "  if title:\n",
         "    plt.title(title)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +218,7 @@
         "id": "eSBpknKEzseN"
       },
       "source": [
-        "Now, we are using the load_img function to load both images: *content_image* and *style_image*.\n",
+        "Now, we use the load_img function to load both images: *content_image* and *style_image*.\n",
         "\n",
         "Then, we are going to show these images using the *subplot* function of the *matplotlib* library. "
       ]
@@ -227,11 +227,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "5_j1tGKmzsuV",
-        "outputId": "87ae5a20-eaa9-4dac-e9b6-c9a280a38429",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        }
+        },
+        "outputId": "87ae5a20-eaa9-4dac-e9b6-c9a280a38429"
       },
       "source": [
         "content_image = load_img(content_path)\n",
@@ -243,7 +243,7 @@
         "plt.subplot(1, 2, 2)\n",
         "imshow(style_image, 'Style Image')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,7 +268,7 @@
       "source": [
         "## Fast Style Transfer using TF-Hub\n",
         "\n",
-        "Now we are going to create our first styled image. We are going to use *TF-Hub*, which is a module for fast artistic style transfer. \n",
+        "In this step, we are going to create our first styled image. We are going to use *TF-Hub*, which is a module for fast artistic style transfer. \n",
         "\n",
         "First, we are going to use the *TensorFlow-hub* library. Then, we are going to load the hub module. Then, we are going to use the *hub_model*, the *content*, and *style* images to create a *stylized_image*.\n",
         "\n",
@@ -279,11 +279,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7euy3oq80GhY",
-        "outputId": "2ebb8289-9d9c-4250-a01f-c4f00b8e72d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 441
-        }
+        },
+        "outputId": "2ebb8289-9d9c-4250-a01f-c4f00b8e72d4"
       },
       "source": [
         "import tensorflow_hub as hub\n",
@@ -291,7 +291,7 @@
         "stylized_image = hub_model(tf.constant(content_image), tf.constant(style_image))[0]\n",
         "tensor_to_image(stylized_image)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,10 +338,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "AXSd6tv65AxS",
-        "outputId": "0545c121-068a-4b02-b4f5-7859d0324550",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0545c121-068a-4b02-b4f5-7859d0324550"
       },
       "source": [
         "x = tf.keras.applications.vgg19.preprocess_input(content_image*255)\n",
@@ -350,7 +350,7 @@
         "prediction_probabilities = vgg(x)\n",
         "prediction_probabilities.shape"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,23 +380,23 @@
         "id": "lKOxew98-mZB"
       },
       "source": [
-        "Now, we are going to show the top 5 classification predictions of this content image using the *VGG19* model.  "
+        "In this step, we are going to show the top 5 classification predictions of this content image using the *VGG19* model.  "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "PxbX3IhL-mkL",
-        "outputId": "c8e5b095-4f60-44f9-be77-bab569460128",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c8e5b095-4f60-44f9-be77-bab569460128"
       },
       "source": [
         "predicted_top_5 = tf.keras.applications.vgg19.decode_predictions(prediction_probabilities.numpy())[0]\n",
         "[(class_name, prob) for (number, class_name, prob) in predicted_top_5]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -437,10 +437,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hFK7QNA9_FYp",
-        "outputId": "7f465781-c391-4815-ff98-fa7fee753ede",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7f465781-c391-4815-ff98-fa7fee753ede"
       },
       "source": [
         "vgg = tf.keras.applications.VGG19(include_top=False, weights='imagenet')\n",
@@ -449,7 +449,7 @@
         "for layer in vgg.layers:\n",
         "  print(layer.name)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "VFgMinczBF9T"
       },
       "source": [
-        "Now, we are going to choose intermediate layers from the *VGG19* model to represent the style and content of the image. Then, we are going to define the number of content layers and the number of style layers. \n"
+        "The next step is to choose intermediate layers from the *VGG19* model to represent the style and content of the image. Then, we are going to define the number of content layers and the number of style layers. \n"
       ]
     },
     {
@@ -510,7 +510,7 @@
         "num_content_layers = len(content_layers)\n",
         "num_style_layers = len(style_layers)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +563,7 @@
         "  model = tf.keras.Model([vgg.input], outputs)\n",
         "  return model"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,10 +581,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9AIpqWfhBka5",
-        "outputId": "4bbbd39b-2cd7-4896-96c9-537d56315a64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bbbd39b-2cd7-4896-96c9-537d56315a64"
       },
       "source": [
         "style_extractor = vgg_layers(style_layers)\n",
@@ -599,7 +599,7 @@
         "  print(\"  mean: \", output.numpy().mean())\n",
         "  print()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
         "  num_locations = tf.cast(input_shape[1]*input_shape[2], tf.float32)\n",
         "  return result/(num_locations)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -691,7 +691,7 @@
         "\n",
         "Then, we are going to define a *content_dict* that maps *content_layers* to *content_outputs*. \n",
         "\n",
-        "Then, we are going to define a *style_dict* that maps *style_layers* to *style_outputs*.\n"
+        "Finally, we are going to define a *style_dict* that maps *style_layers* to *style_outputs*.\n"
       ]
     },
     {
@@ -730,7 +730,7 @@
         "    \n",
         "    return {'content':content_dict, 'style':style_dict}"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,10 +750,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ro-5qodUMARB",
-        "outputId": "40d90ab6-2882-4b53-9ece-fe7d009d27d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "40d90ab6-2882-4b53-9ece-fe7d009d27d1"
       },
       "source": [
         "extractor = StyleContentModel(style_layers, content_layers)\n",
@@ -777,7 +777,7 @@
         "  print(\"    max: \", output.numpy().max())\n",
         "  print(\"    mean: \", output.numpy().mean())\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
       "source": [
         "## Run gradient descent\n",
         "\n",
-        "Now, are are going to implement the style transfer algorithm using the *extractor* function. Do this by calculating the *mean square error* for your image's output relative to each target, then take the weighted sum of these losses.\n",
+        "In this step, we are going to implement the style transfer algorithm using the *extractor* function. Do this by calculating the *mean square error* for your image's output relative to each target, then take the weighted sum of these losses.\n",
         "\n",
         "First, we are going to set your style and content target values using the *extractor*."
       ]
@@ -846,7 +846,7 @@
         "style_targets = extractor(style_image)['style']\n",
         "content_targets = extractor(content_image)['content']"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +855,7 @@
         "id": "gKlPEAP2SNnL"
       },
       "source": [
-        "Now, we are going to define the *image* variable, which is the generated image to be optimized. This *image* variable has the same shape as the *content* image, so we are using it to define the *image* variable. \n",
+        "We're now are going to define the *image* variable, which is the generated image to be optimized. This *image* variable has the same shape as the *content* image, so we are using it to define the *image* variable. \n",
         "\n"
       ]
     },
@@ -867,7 +867,7 @@
       "source": [
         "image = tf.Variable(content_image)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -876,7 +876,7 @@
         "id": "NgufBU1ZXKww"
       },
       "source": [
-        "Now, we are going to define the *clip_0_1* function. In this function, we are going to use the *clip_by_value* function to keep the pixel values between 0 and 1."
+        "The next step is to define the *clip_0_1* function. In this function, we are going to use the *clip_by_value* function to keep the pixel values between 0 and 1."
       ]
     },
     {
@@ -888,7 +888,7 @@
         "def clip_0_1(image):\n",
         "  return tf.clip_by_value(image, clip_value_min=0.0, clip_value_max=1.0)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -908,7 +908,7 @@
       "source": [
         "opt = tf.optimizers.Adam(learning_rate=0.02, beta_1=0.99, epsilon=1e-1)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -935,7 +935,7 @@
         "style_weight=1e-2\n",
         "content_weight=1e4"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -957,7 +957,7 @@
         "    loss = style_loss + content_loss\n",
         "    return loss"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -966,7 +966,7 @@
         "id": "eiA39ZrUcHWc"
       },
       "source": [
-        "Now, we are going to define the train_step function to update the image in each training step. \n",
+        "We're now are going to define the train_step function to update the image in each training step. \n",
         "\n",
         "For this, we use the *tf.GradientTape* function. First, we use the function extractor to describe the image. Then, we get the loss. Then, we compute and update gradients. Then, we use the *clip_0_1* function to keep pixel values between 0 and 1. \n"
       ]
@@ -987,7 +987,7 @@
         "  opt.apply_gradients([(grad, image)])\n",
         "  image.assign(clip_0_1(image))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -996,18 +996,18 @@
         "id": "6yc2itcYmbCO"
       },
       "source": [
-        "Now, we are going to run a few training steps to test this function."
+        "In this step, we are going to run a few training steps to test this function."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "3ISEd3fOmbRL",
-        "outputId": "86d84dcb-9414-41c0-f89c-eed1a92791eb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 439
-        }
+        },
+        "outputId": "86d84dcb-9414-41c0-f89c-eed1a92791eb"
       },
       "source": [
         "train_step(image)\n",
@@ -1015,7 +1015,7 @@
         "train_step(image)\n",
         "tensor_to_image(image)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1038,11 +1038,11 @@
         "id": "6QAoVVxdmm36"
       },
       "source": [
-        "Now, we are going to perform longer optimization.\n",
+        "We're now going to perform longer optimization.\n",
         "\n",
         "We are going to measure the optimization time. For this, we are going to import *time* library. Then, we are going to define the *start* time. \n",
         "\n",
-        "Now, we are going to define the training hyperparameters such as *epochs*, *steps_per_epoch*, and *step*. The number of epochs is the number of times we are going to train the network. \n",
+        "In this step, we are going to define the training hyperparameters such as *epochs*, *steps_per_epoch*, and *step*. The number of epochs is the number of times we are going to train the network. \n",
         "\n",
         "We are going to do a for loop to train the network *n* (*epochs*) times. Then, we are going to do a nested for loop to do *m* *(steps_per_epoch)* steps per epoch. In this nested loop, we are using the *train_step* function to do a training step and display the generated image.\n",
         "\n",
@@ -1053,11 +1053,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ukAfwT2wmnA_",
-        "outputId": "f649cf9b-10f3-4b63-b1bd-a5d9726b07ab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        }
+        },
+        "outputId": "f649cf9b-10f3-4b63-b1bd-a5d9726b07ab"
       },
       "source": [
         "import time\n",
@@ -1223,7 +1223,7 @@
       "source": [
         "## Re-run the optimization\n",
         "\n",
-        "Now, we are going to re-run the optimization using *tf.image.total_variation* function. First, we choose a weight for the `total_variation_loss`."
+        "We're now going to re-run the optimization using *tf.image.total_variation* function. First, we choose a weight for the `total_variation_loss`."
       ]
     },
     {
@@ -1243,7 +1243,7 @@
         "id": "JYKbBxxvUtdu"
       },
       "source": [
-        "Now, we are going to update the *train_step* adding the weighted total variation loss to the *loss* variable. "
+        "In this step, we are going to update the *train_step* adding the weighted total variation loss to the *loss* variable. "
       ]
     },
     {
